home/k8s-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: service
  name: homepage
  namespace: homepage
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: homepage
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: service
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/component: service
        app: homepage
    spec:
      containers:
        - name: homepage
          image: gcr.io/homepage-antoine/web
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
